--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
 ================================================== -->
 <section class="featured-posts">
     <div class="section-title">
-        <h2><span>Novedades</span></h2>
+        <h2><span>Los tips más recientes</span></h2>
     </div>
     <div class="row">
 
@@ -34,7 +34,7 @@ title: Home
 
     <div class="section-title">
 
-        <h2><span>Todos nuestros artículos</span></h2>
+        <h2><span>Todo lo necesario para comprender tus seguros</span></h2>
 
     </div>
 
